--- a/source/css/_header.scss
+++ b/source/css/_header.scss
@@ -13,14 +13,14 @@
   width: 100%;
   top: 0;
   left: 0;
-  z-index: 10;
+  z-index: 100;
 }
 
 #header {
   @include single-box-shadow(rgba(100, 100, 100, 0.2), 0, 0, 15px);
   background: $white;
   position: relative;
-  z-index: 10;
+  z-index: 100;
   a {
     color: $base-color;
   }
